<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading …</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">This app won\'t run unless you update the Android Wear app.</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="commono_google_play_services_api_unavailable_text">This app requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tw__composer_hint">What\'s Happening?</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__max_tweet_chars">140</string>
    <string name="tw__post_tweet">Tweet</string>
    <string name="Adobe_CSDK_IDS_PLEASE_WAIT">Please Wait…</string>
    <string name="Adobe_CSDK_action_settings">Settings</string>
    <string name="IDS_COLLABORATION_SHARING_RESTRICTED_ERROR">This feature isn\'t available because your organization has enabled sharing restrictions</string>
    <string name="IDS_COLLABORATOR_LEAVE_FOLDER_FAILURE_MESSAGE">Could Not Leave Folder</string>
    <string name="IDS_COLLABORATOR_LEAVE_FOLDER_SUCCESS_MESSAGE">Successfully Left Folder</string>
    <string name="IDS_LIBRARY_EDIT_CHOOSE">Choose %s</string>
    <string name="adobe_archive_menu_delete">Permanently Delete</string>
    <string name="adobe_csdk_ASSET_BROWSER_COLLABORATION_ACCEPT">ACCEPT</string>
    <string name="adobe_csdk_ASSET_BROWSER_COLLABORATION_REJECT">REJECT</string>
    <string name="adobe_csdk_CANCEL_UPLOAD_ASSET_BROWSER_BUTTON">Cancel Upload</string>
    <string name="adobe_csdk_COLLABORATE_INVITE_EDIT_TEXT_HINT">Add email address</string>
    <string name="adobe_csdk_COLLABORATION_ALREADY_USED">Email Address Already Registered</string>
    <string name="adobe_csdk_COLLABORATION_DELETE_MESSAGE">Do you want to delete this collaborator ?</string>
    <string name="adobe_csdk_COLLABORATION_EDIT">CAN EDIT</string>
    <string name="adobe_csdk_COLLABORATION_INVALID_EMAIL">Invalid Email Address</string>
    <string name="adobe_csdk_COLLABORATION_INVITATION_DELETE_ERROR">Could Not Delete The Invitation</string>
    <string name="adobe_csdk_COLLABORATION_INVITATION_DELETE_MESSAGE">Do you want to delete this invitation ?</string>
    <string name="adobe_csdk_COLLABORATION_INVITE">ADD</string>
    <string name="adobe_csdk_COLLABORATION_INVITEE">INVITED</string>
    <string name="adobe_csdk_COLLABORATION_INVITE_CANCEL">CANCEL</string>
    <string name="adobe_csdk_COLLABORATION_INVITE_ERROR_MESSAGE">Could Not Complete the Invitation</string>
    <string name="adobe_csdk_COLLABORATION_OWNER">OWNER</string>
    <string name="adobe_csdk_COLLABORATION_SELF_DELETE_MESSAGE">Do you want to leave this folder ?</string>
    <string name="adobe_csdk_COLLABORATION_VIEW">CAN VIEW</string>
    <string name="adobe_csdk_COLLABORATOR_DELETE_NEGATIVE_BUTTON">Cancel</string>
    <string name="adobe_csdk_COLLABORATOR_DELETE_POSITIVE_BUTTON">Delete</string>
    <string name="adobe_csdk_CREATE_NEW_FOLDER_BUTTON_CANCEL">Cancel</string>
    <string name="adobe_csdk_CREATE_NEW_FOLDER_BUTTON_CREATE">Create</string>
    <string name="adobe_csdk_IDS_ASSET_DETAILS_HEIGHT">Height</string>
    <string name="adobe_csdk_IDS_ASSET_DETAILS_MODIFIED">Modified</string>
    <string name="adobe_csdk_IDS_ASSET_DETAILS_SIZE">Size</string>
    <string name="adobe_csdk_IDS_ASSET_DETAILS_UPLOADED">Uploaded</string>
    <string name="adobe_csdk_IDS_ASSET_DETAILS_WIDTH">Width</string>
    <string name="adobe_csdk_asset_view_edit_dialog_title">Confirm</string>
    <string name="adobe_csdk_cc_title">Creative Cloud</string>
    <string name="adobe_csdk_collaborator">Collaborators</string>
    <string name="adobe_csdk_collaborator_leave_folder">Remove Myself</string>
    <string name="adobe_csdk_notification_title">Notifications</string>
    <string name="adobe_csdk_uxassetbrowser_action_aslist">View as List</string>
    <string name="adobe_csdk_uxassetbrowser_action_edit_asset">Edit</string>
    <string name="adobe_csdk_uxassetbrowser_action_sort_alpha">Sort Alphabetically</string>
    <string name="adobe_csdk_uxassetbrowser_create_new_folder">Create New Folder</string>
    <string name="automatic_backup_enabled">Automatic Backup Enabled</string>
    <string name="automatic_backup_text">Your projects automatically sync to\nyour Creative Cloud account and will\nbe available across all your devices.</string>
    <string name="ccv_video_text">View your published video and share on \nFacebook, Twitter and more.</string>
    <string name="dropbox_title">Dropbox</string>
    <string name="media_picker_google_drive">Google Drive</string>
    <string name="ok_got_it">OK, got it.</string>
    <string name="share_video_text">SHARE VIDEO</string>
    <string name="share_work_live">Your Work is Live!</string>
    <string name="sharing_publish_btn">Publish</string>
    <string name="youtube_disclaimer">By clicking \'Publish\', you certify that you own all rights to the content or that you are authorized by the owner to make the content publicly available on YouTube, and that it otherwise complies with the YouTube Terms of Service located at .</string>
    <string name="youtube_private_text">Private</string>
    <string name="youtube_project_name">Project Name</string>
    <string name="youtube_public_text">Public</string>
    <string name="youtube_settings_madewithclip_text">Made with Adobe Premiere Clip. Make your own clip at https://premiereclip.adobe.com</string>
    <string name="youtube_settings_title">YouTube Settings</string>
    <string name="youtube_sign_out">Sign Out</string>
    <string name="youtube_signin_text">Sign in to Publish</string>
    <string name="youtube_tag">tag1, tag2</string>
    <string name="youtube_unlisted_text">Unlisted</string>
</resources>