<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/adobe_csdk_fragment_asset_spacing_normal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <GridLayout
        android:background="@drawable/asset_file_info_details_dialog"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="2">
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_textView1"
            android:text="@string/adobe_csdk_IDS_ASSET_DETAILS_UPLOADED"
            style="@style/AssetFileDetailsText.Left"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_UPLOADED"
            style="@style/AssetFileDetailsText.Right"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:text="@string/adobe_csdk_IDS_ASSET_DETAILS_MODIFIED"
            style="@style/AssetFileDetailsText.Left"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_MODIFIED"
            style="@style/AssetFileDetailsText.Right"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_SIZE_HEADER"
            android:text="@string/adobe_csdk_IDS_ASSET_DETAILS_SIZE"
            style="@style/AssetFileDetailsText.Left"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_SIZE"
            style="@style/AssetFileDetailsText.Right"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_WIDTH_NEW_HEADER"
            android:text="@string/adobe_csdk_IDS_ASSET_DETAILS_WIDTH"
            style="@style/AssetFileDetailsText.Left"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_WIDTH_NEW"
            style="@style/AssetFileDetailsText.Right"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_HEIGHT_NEW_HEADER"
            android:text="@string/adobe_csdk_IDS_ASSET_DETAILS_HEIGHT"
            style="@style/AssetFileDetailsText.Left"/>
        <com.adobe.creativesdk.foundation.internal.utils.CreativeSDKTextView
            android:id="@+id/adobe_csdk_ASSET_DETAILS_HEIGHT"
            style="@style/AssetFileDetailsText.Right"/>
    </GridLayout>
</LinearLayout>
