<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/round_dialog"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="280dp"
        android:layout_height="220dp">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/btn_share_cclogo_big"
            android:adjustViewBounds="true"
            android:tint="@color/white"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/automatic_sync_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/automatic_backup_enabled"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/automatic_sync_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatic_backup_text"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ok_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ok_got_it"/>
    </LinearLayout>
</LinearLayout>
