<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editor_topbar_height">
            <ImageView
                android:id="@+id/backButton"
                android:tint="@color/theme_color"
                android:onClick="closeAndGoBack"
                style="@style/backIconStyle"/>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharing_publish_btn"
                android:layout_toRightOf="@+id/backButton"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="32sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_work_live"/>
            <TextView
                android:textSize="14sp"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_gravity="center"
                android:id="@+id/video_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/publish_project_thumb_final_share"
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/gra_projectthumb_placeholder"/>
            <TextView
                android:textSize="14sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/ccv_video_text"/>
            <Button
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:background="@drawable/ripple_purple_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/share_video_text"
                android:onClick="onShareClick"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/share_intents"/>
</RelativeLayout>
